# corpse

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
corpse/: animation.py  event.py  object.py  render.py  roof.py  sandbox.py  ui.py
corpse/utils/: math.py
data/script/: fix_visible_scripte.py
data/world/: bridge.tsx  corpse.tiled-session  guns.tsx  items.tsx  misc.tsx  road.tsx  summer_island.tmx  test.tmx  tileset.tsx  trees.tsx  vehicles.tsx
data/world/sandbox/: map.tmx
data/world/summer_island/: boats.tsx  creatures.tsx  fix_visible_scripte.py  ground.tsx  ground_as_tiles.tsx  house_floor.tsx  interior.tsx  machine.tsx  map - Copy.txt  map.tmx  map_bog.tmx  objects.tsx  roof.tsx  summer_island_map.tmx  trees.tsx
data/world/winter_island/: autumn_ground.tsx  autumn_trees.tsx  boats.tsx  creatures.tsx  fix_visible_scripte.py  interior.tsx  machine.tsx  map - Copy.tmx  map _big0.tmx  map.tmx  map_big1.tmx  objects.tsx  roof.tsx  (+4 more)
resources/world/: bridge.tsx  corpse.tiled-session  ground.tsx  items.tsx  misc.tsx  people.tsx  road.tsx  roofs.tsx  storages.tsx  test.tmx  trees.tsx  vehicles.tsx
src/: ai.py  animation.py  bind.py  camera.py  chrono.py  chunk.py  creature.py  effect.py  event.py  finish.py  input.py  item.py  items.py  location.py  main.py  menu.py  meta.py  movement.py  object.py  position.py  render.py  roof.py  rotation.py  shoot.py  size.py  ui.py  utils.py
src/features/: movement.py
src/utils/: __init__.py  consts.py  convert.py  fs.py  get.py  make.py  math.py  save.py
vevn/Scripts/: activate  activate.bat
(+68 files in other folders)
